--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -77,12 +77,12 @@
               <form method="get" class="cart__order__form">
                 <div class="cart__order__form__question">
                   <label for="firstName">Prénom: </label>
-                  <input type="text" name="firstName" id="firstName" required>
+                  <input type="text" name="firstName" id="firstName" pattern="[A-Za-z]{2,10}[ -]?[A-Za-z]{2,10}" required>
                   <p id="firstNameErrorMsg"><!-- ci est un message d'erreur --></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="lastName">Nom: </label>
-                  <input type="text" name="lastName" id="lastName" required>
+                  <input type="text" name="lastName" id="lastName" pattern="[A-Za-z]{2,30}[ -]?[A-Za-z]{2,10}[ -]?[A-Za-z]{2,10}" required>
                   <p id="lastNameErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__question">
@@ -92,7 +92,7 @@
                 </div>
                 <div class="cart__order__form__question">
                   <label for="city">Ville: </label>
-                  <input type="text" name="city" id="city" required>
+                  <input type="text" name="city" id="city" pattern="[A-Za-z]{2,30}[ -]?[A-Za-z]{2,30}" required>
                   <p id="cityErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__question">
